--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -18,7 +18,7 @@ import Icon from '../components/atoms/Icon.astro';
 				</Heading>
 				<Text color="secondary" size="xl" class="max-w-3xl mx-auto">
 					¿Tienes una idea? ¿Necesitas ayuda con desarrollo, infraestructura o seguridad?
-					Estoy aquí para apoyarte con todas mis recomendaciones.
+					Estoy aquí para apoyarte.
 				</Text>
 			</div>
 		</div>
