feat: se redacta post1

--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -6,7 +6,7 @@ import Button from '../components/atoms/Button.astro';
 import Icon from '../components/atoms/Icon.astro';
 import Text from '../components/atoms/Text.astro';
 
-import "../styles/global.css";
+import "../styles/globalBlog.css";
 import RemoteImage from '../components/atoms/RemoteImage.astro';
 
 const { frontmatter, url } = Astro.props;
