fix: update profile image

--- a/src/components/atoms/RemoteImage.astro
+++ b/src/components/atoms/RemoteImage.astro
@@ -16,7 +16,7 @@ const {
     ...props 
 } = Astro.props;
 
-export const profileImage = "https://media.licdn.com/dms/image/v2/D4E03AQFsRJCuxdTt9Q/profile-displayphoto-scale_400_400/B4EZnMwFAnHoAg-/0/1760076781380?e=1762387200&v=beta&t=6rQ-KvMLp4o4r2IDgGHd0KmjH-_NevQGwuA_-d5L6mE";
+export const profileImage = "/images/assets/profile.png";
 ---
 
 <Image alt={alt} src={src} class={className} loading={loading} height={100} width={100} {...props} />
