--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -21,7 +21,7 @@ import RemoteImage, {profileImage} from '../atoms/RemoteImage.astro';
 							<!-- Foto profesional -->
 							<RemoteImage src={profileImage}
 								alt="Carlos Mairena López"
-								class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center"
+								class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center object-cover"
 								loading="lazy"
 							/>
 						</div>
