--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const latestPosts = (await getCollection("posts")).sort((a: any, b: any) =>
 							<!-- Foto profesional -->
 							<RemoteImage src={profileImage} 
 								alt="Carlos Mairena López"
-								class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center"
+								class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center object-cover"
 								loading="eager"
 							/>
 					</div>
