--- a/src/pages/sobre-mi.astro
+++ b/src/pages/sobre-mi.astro
@@ -35,7 +35,7 @@ import Button from '../components/atoms/Button.astro';
 							<!-- foto profesional -->
 							<RemoteImage src={profileImage} 
 							alt="Carlos Mairena López"
-							class="w-full h-full rounded-lg bg-gray-200 flex items-center justify-center"
+							class="w-full h-full rounded-lg bg-gray-200 flex items-center justify-center object-cover"
 							loading="eager"
 						/>
 						</div>
